# markdown_rag

./: .env.example  .gitignore  README.ko.md  README.md  TODO_exaone_migration.md  pyproject.toml
.claude/: settings.json
.moai/: manifest.json
.moai/config/sections/: project.yaml
input/Cisco_CCIE/CCIE_Vol1/: 00_front-matter.md  02_fifth-edition.md  INDEX.md  (+7 more)
scripts/: analyze_file_sizes.py  apply_feedback.py  build_bm25_from_chroma.py  merge_vol1.py  rebuild_bm25.py  reindex_optimized.py  reindex_vol1.py  review_rag.py  validate_rag.py  validation_dataset.json
src/markdown_rag/: __init__.py  __main__.py  config.py  models.py
tests/: conftest.py  test_config.py  test_coverage_gaps.py  test_coverage_phase2.py  test_models.py
tests/api/: test_app.py  test_routes.py  test_schemas.py
tests/chunker/: __init__.py  test_metadata.py  test_parser.py  test_splitter.py
tests/cli/: test_ask_cmd.py  test_ingest_cmd.py  test_main.py  test_search_cmd.py  test_status_cmd.py
tests/embedding/: __init__.py  test_e5_prefix.py  test_local.py  test_openai.py
tests/fixtures/: sample_basic.md  sample_frontmatter.md  sample_nested.md
tests/ingest/: __init__.py  test_directory_index.py  test_doc_metadata.py  test_pipeline.py  test_scanner.py
tests/llm/: __init__.py  test_base.py  test_local_llm.py  test_openai_llm.py
tests/retriever/: __init__.py  test_bm25.py  test_hybrid.py  test_query.py  test_query_filter.py  test_rag.py  test_reranker.py  test_search.py  test_search_filter.py
tests/store/: __init__.py  test_chroma.py  test_chroma_adjacent.py  test_chroma_filter.py
(+40 files in other folders)
